Frontend for events is complete

--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-2">
                 <div class="card">
-                    <a href="events/view_events.html">
+                    <a href="events/menu.html">
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-calendar-alt"></i></h1>
                             <h4 class="mb-3">Events</h4>
