--- a/tuumes/phase2/src/main/resources/static/account/events/view_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/view_events.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="../assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
         .container {
             border-radius: 25px
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../dashboard.html">Go back</a>
+                <a class="nav-link" href="menu.html">Go back</a>
             </li>
         </ul>
     </div>
