For messages, also got a ton of work done

--- a/tuumes/phase2/src/main/resources/static/account/contacts/view_contacts.html
+++ b/tuumes/phase2/src/main/resources/static/account/contacts/view_contacts.html
@@ -84,7 +84,7 @@
 
 <script>
     function getContacts() {
-        $.postJSON("/user/contacts/view", {
+        $.getJSON("/user/contacts/view", {
             userId: USER_ID,
         }, function(result) {
             let to_print = ``;
