--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -55,7 +55,7 @@
             </div>
             <div class="col-2">
                 <div class="card">
-                    <a href="messages/view_all.html">
+                    <a href="messages/menu.html">
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-inbox"></i></h1>
                             <h4 class="mb-3">Messages</h4>
