--- a/tuumes/phase2/src/main/resources/static/account/events/my_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/my_events.html
@@ -39,7 +39,7 @@
         <a class="mt-2 mb-2" href="">Contact: ... </a>
         <br>
 
-        <button class="btn btn-warning" id="unregister" type="submit"><i class="fa fa-calendar-minus fa-lg mr-2"></i> 
+        <button class="btn btn-warning" id="unregister" type="button"><i class="fa fa-calendar-minus fa-lg mr-2"></i> 
             ... 
         </button>
         <br><br>
