--- a/tuumes/phase2/src/main/resources/static/login.html
+++ b/tuumes/phase2/src/main/resources/static/login.html
@@ -75,7 +75,7 @@
                 data[e.name] = e.value;
         });
 
-        $.postJSON("/user/login", data, function(result) {
+        $.postJSON("/users/login", data, function(result) {
             console.log(result);
 
             if (result.valid) {
