--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -36,31 +36,25 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="menu.html">Go back</a>
             </li>
         </ul>
-        <span class="navbar-text white-text">
-                    Guest
-                </span>
     </div>
 </nav>
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
         <h3 class="pb-3">Compose a new message:</h3>
-
         <form class="container needs-validation" id="message_form">
-            <div class="form-group">
-                <!-- TODO: Get user's contacts from program -->
-                <select class="browser-default custom-select" id="recipient" name="recipient" required>
+            <div class="form-group" id="recipient_selector">
+                <select class="browser-default custom-select" id="recipient" name="recipient" onchange="switchContact();">
                     <option disabled hidden selected>Recipient</option>
-                    <option value="1">Contact Name One</option>
-                    <option value="2">Contact Name Two</option>
-                    <option value="3">Contact Name Three</option>
+                    <option value="...">...</option>
                 </select>
+            </div>
+
+            <div class="form-group">
+                <input class="form-control" id="email" name="email" placeholder="Email (Optional)" required></input>
             </div>
 
             <div class="form-group">
@@ -81,9 +75,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
-<script src="assets/js/global.js" type="text/javascript"></script>
+<script src="../../assets/js/global.js" type="text/javascript"></script>
+<script src="../../assets/js/account.js" type="text/javascript"></script>
 
 <script>
+    if (window.location.hash) {
+        let hash = window.location.hash.substring(1);
+        $("#email").val(hash);
+        $("#recipient_selector").hide();
+        $("#email").prop('disabled', true);
+    }
+
+    function switchContact() {
+        $("#email").val($("#recipient").val());
+    };
+
     $("#message_form").submit(function(e) {
         if (!validate(this))
             return false;
@@ -97,16 +103,22 @@
                 data[e.name] = e.value;
         });
 
-        $.postJSON("/user/message", data, function(result) {
+        data['content'] = $("#message").val();
+        data['recipientEmail'] = $("#recipient").val();
+        data['userId'] = USER_ID;
+
+        $.postJSON("/message/compose", data, function(result) {
             console.log(result);
 
             if (result.valid) {
                 toastr.success("Your message has been sent.");
-
             } else {
                 switch (result.message) {
-                    case "USER_DOES_NOT_EXIST":
+                    case "USER_NOT_FOUND":
                         toastr.error("This user does not exist.");
+                        break;
+                    case "INVALID_CONTACT":
+                        toastr.error("This user is not in your contacts.");
                         break;
                     default:
                         toastr.error("Unexpected error: " + result.message);
@@ -118,6 +130,21 @@
         return false;
     });
 
+    function getContacts() {
+        $.getJSON("/users/contacts", {
+            userId: USER_ID,
+        }, function(result) {
+            let to_print = `<option disabled hidden selected>Recipient</option>`;
+            result.data.forEach(contact => {
+                to_print += `
+                    <option value="${contact.email}">${contact.name}</option>
+                `;
+            });
 
+            $("#messages").html(to_print);
+        });
+    }
+
+    getContacts();
 </script>
 </html>
