--- a/tuumes/phase2/src/main/resources/static/register.html
+++ b/tuumes/phase2/src/main/resources/static/register.html
@@ -79,7 +79,7 @@
                 data[e.name] = e.value;
         });
 
-        $.postJSON("api/user/register", data, function(result) {
+        $.postJSON("/users/register", data, function(result) {
             console.log(result);
 
             if (result.valid) {
