--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -65,7 +65,7 @@
             </div>
             <div class="col-2">
                 <div class="card">
-                    <a href="speaker">
+                    <a href="speaker/view_speaking_events.html">
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-volume-up"></i></h1>
                             <h4 class="mb-3">Speaker</h4>
@@ -75,20 +75,10 @@
             </div>
             <div class="col-2">
                 <div class="card">
-                    <a href="organizer">
+                    <a href="organizer/menu.html">
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-users"></i></h1>
                             <h4 class="mb-3">Organizer</h4>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <a href="settings.html">
-                        <div class="card-content text-center">
-                            <h1 class="bigicon"><i class="fas fa-cog"></i></h1>
-                            <h4 class="mb-3">Settings</h4>
                         </div>
                     </a>
                 </div>
