--- a/tuumes/phase2/src/main/resources/static/account/events/menu.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/menu.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../dashboard.html">Go back</a>
+                    <a class="nav-link" href="../dashboard.html">Dashboard</a>
                 </li>
             </ul>
         </div>
@@ -49,6 +49,16 @@
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-smile"></i></h1>
                             <h4 class="mb-3">My Events</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
+                    <a href="schedule.html" target="_blank">
+                        <div class="card-content text-center">
+                            <h1 class="bigicon"><i class="fas fa-print"></i></h1>
+                            <h4 class="mb-3">Schedule</h4>
                         </div>
                     </a>
                 </div>
