--- a/tuumes/phase2/src/main/resources/static/account/messages/menu.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/menu.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../dashboard.html">Go back</a>
+                    <a class="nav-link" href="../dashboard.html">Dashboard</a>
                 </li>
             </ul>
         </div>
