--- a/tuumes/phase2/src/main/resources/static/account/organizer/view_rooms.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/view_rooms.html
@@ -36,15 +36,9 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="menu.html">Go back</a>
             </li>
         </ul>
-        <span class="navbar-text white-text">
-                    Guest
-                </span>
     </div>
 </nav>
 
