--- a/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="../assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
         .container {
             border-radius: 25px
@@ -42,15 +42,9 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                    <a class="nav-link" href="../dashboard.html">Dashboard</a>
             </li>
         </ul>
-        <span class="navbar-text white-text">
-                    Guest
-                </span>
     </div>
 </nav>
 
@@ -130,5 +124,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
-<script src="assets/js/global.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../assets/js/global.js"></script>
+<script type="text/javascript" src="../../assets/js/account.js"></script>
 </html>
