--- a/tuumes/phase2/src/main/resources/static/account/events/schedule.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/schedule.html
@@ -14,26 +14,6 @@
 </head>
 
 <body class="grey lighten-4">
-<nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
-    <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
-    <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-            data-target="#navbarText" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
-            </li>
-        </ul>
-        <span class="navbar-text white-text">
-                    Guest
-                </span>
-    </div>
-</nav>
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
@@ -90,4 +70,9 @@
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
 <script src="assets/js/global.js" type="text/javascript"></script>
+
+<script>
+    print();
+</script>
+
 </html>
