--- a/tuumes/phase2/src/main/resources/static/account/organizer/create_account.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/create_account.html
@@ -5,14 +5,14 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
     </style>
 </head>
 
 <body class="grey lighten-4">
 <nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
-    <a class="navbar-brand" href="index.html"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
+    <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
     <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbarText" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
@@ -20,15 +20,9 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="menu.html">Go back</a>
             </li>
         </ul>
-        <span class="navbar-text white-text">
-                Guest
-            </span>
     </div>
 </nav>
 
@@ -74,7 +68,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
-<script src="assets/js/global.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../assets/js/global.js"></script>
+<script type="text/javascript" src="../../assets/js/account.js"></script>
 
 <script>
     $("#register_form").submit(function(e) {
