--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="../assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
         .container {
             border-radius: 25px
@@ -21,10 +21,6 @@
             overflow: auto;
             height: 100%;
         }
-
-
-
-
     </style>
 </head>
 
@@ -38,15 +34,9 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="menu.html">Go back</a>
             </li>
         </ul>
-        <span class="navbar-text white-text">
-                    Guest
-                </span>
     </div>
 </nav>
 
@@ -111,5 +101,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
-<script src="assets/js/global.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../assets/js/global.js"></script>
+<script type="text/javascript" src="../../assets/js/account.js"></script>
+
+<script>
+    function deleteEvent(eventId) {
+        $.postJSON("/user/contacts/remove", {
+            userId: USER_ID,
+            eventId: eventId
+        }, function(result) {
+            getEvents();
+        });
+
+        return false;
+    }
+</script>
 </html>
