--- a/tuumes/phase2/src/main/resources/static/login.html
+++ b/tuumes/phase2/src/main/resources/static/login.html
@@ -79,8 +79,8 @@
             console.log(result);
 
             if (result.valid) {
-                localStorage.setItem("TU-userId", data.id);
-                localStorage.setItem("TU-userType", data.userType);
+                localStorage.setItem("TU-userId", result.data.id);
+                localStorage.setItem("TU-userType", result.data.userType);
                 location.href = "account/dashboard.html";
             } else {
                 switch (result.message) {
