--- a/tuumes/phase2/src/main/resources/static/account/events/schedule.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/schedule.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="../assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
         .container {
             border-radius: 25px
@@ -69,7 +69,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
-<script src="assets/js/global.js" type="text/javascript"></script>
+<script src="../../assets/js/global.js" type="text/javascript"></script>
+<script src="../../assets/js/account.js" type="text/javascript"></script>
 
 <script>
     print();
