--- a/tuumes/phase2/src/main/resources/static/account/organizer/send_speakers_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/send_speakers_message.html
@@ -44,19 +44,8 @@
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
-        <h3 class="pb-3">Compose a new message:</h3>
+        <h3 class="pb-3">Compose a message to all speakers:</h3>
         <form class="container needs-validation" id="message_form">
-            <div class="form-group" id="recipient_selector">
-                <select class="browser-default custom-select" id="recipient" name="recipient" onchange="switchContact();">
-                    <option disabled hidden selected>Recipient</option>
-                    <option value="...">...</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <input class="form-control" id="email" name="email" placeholder="Email (Optional)" required></input>
-            </div>
-
             <div class="form-group">
                 <textarea autocomplete="off" class="form-control" id="message" name="message"
                           placeholder="Message Content" required rows="6"></textarea>
@@ -79,17 +68,6 @@
 <script src="../../assets/js/account.js" type="text/javascript"></script>
 
 <script>
-    if (window.location.hash) {
-        let hash = window.location.hash.substring(1);
-        $("#email").val(hash);
-        $("#recipient_selector").hide();
-        $("#email").prop('disabled', true);
-    }
-
-    function switchContact() {
-        $("#email").val($("#recipient").val());
-    };
-
     $("#message_form").submit(function(e) {
         if (!validate(this))
             return false;
@@ -104,7 +82,6 @@
         });
 
         data['content'] = $("#message").val();
-        data['recipientEmail'] = $("#recipient").val();
         data['userId'] = USER_ID;
 
         $.postJSON("/message/compose", data, function(result) {
@@ -129,22 +106,5 @@
 
         return false;
     });
-
-    function getContacts() {
-        $.getJSON("/users/contacts", {
-            userId: USER_ID,
-        }, function(result) {
-            let to_print = `<option disabled hidden selected>Recipient</option>`;
-            result.data.forEach(contact => {
-                to_print += `
-                    <option value="${contact.email}">${contact.name}</option>
-                `;
-            });
-
-            $("#messages").html(to_print);
-        });
-    }
-
-    getContacts();
 </script>
 </html>
